--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style-menu.min.css">
-    <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,900,800,700,200,100' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Raleway:400,300,900,800,700,200,100' rel='stylesheet' type='text/css'>
     <script src="js/queryloader2.min.js" type="text/javascript"></script>
     <script src="js/preload.js" type="text/javascript"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
