New icon anims and small fixes

--- a/index.html
+++ b/index.html
@@ -138,7 +138,6 @@
         <div class="page-portfolio webdesign header">
           <div class="portfolio-header-info">
             <h1>Web design</h1>
-            <h3>just a few things I am proud of...</h3>
           </div>
         </div>
 
@@ -203,7 +202,6 @@
         <div class="page-portfolio frontend header">
           <div class="portfolio-header-info">
             <h1>Frontend dev<span class="no-mobile-span">elopment</span></h1>
-            <h3>just a few things I am proud of...</h3>
           </div>
         </div>
 
@@ -212,29 +210,30 @@
             <div class="col-xs-12 col-md-4">
               <div class="semi-height portfolio-missionary">
                 <div class="misionary-item" data-toggle="modal" data-target="#modalStats" data-load="stats">
-                  <div class="logo-placement color-gray">
-                    <i class="fa fa-bar-chart"></i>
+                  <div class="color-gray flex-item fd-boxes">
+                    <lord-icon
+                        src="https://cdn.lordicon.com/gqdnbnwt.json"
+                        trigger="hover"
+                        colors="primary:#1b1b1b,secondary:#f3cd85"
+                        style="width:200px;height:200px">
+                    </lord-icon>
+                    <span class="color-white">UNHCR Statistics</span>
                   </div>
-                  <div class="overlay">
-                    <div class="overlay-border"></div>
-                    <div class="overlay-box">
-                      <h3>UNHCR Statistics</h3>
-                    </div>
-                  </div>
+
                 </div>
               </div>
             </div>
             <div class="col-xs-12 col-md-4">
               <div class="semi-height portfolio-missionary">
                 <div class="misionary-item" data-toggle="modal" data-target="#modalSalon" data-load="salon">
-                  <div class="logo-placement color-red">
-                    <i class="fa fa-line-chart"></i>
-                  </div>
-                  <div class="overlay">
-                    <div class="overlay-border"></div>
-                    <div class="overlay-box">
-                      <h3>Salonchamp</h3>
-                    </div>
+                  <div class="color-red flex-item fd-boxes">
+                    <lord-icon
+                        src="https://cdn.lordicon.com//qhgmphtg.json"
+                        trigger="hover"
+                        colors="primary:#f3cd85,secondary:#1b1b1b"
+                        style="width:200px;height:200px">
+                    </lord-icon>
+                    <span class="color-white">Salonchamp</span>
                   </div>
                 </div>
               </div>
@@ -242,15 +241,16 @@
             <div class="col-xs-12 col-md-4">
               <div class="semi-height portfolio-missionary">
                 <div class="misionary-item" data-toggle="modal" data-target="#modalPharma" data-load="pharma">
-                  <div class="logo-placement color-blue">
-                    <i class="fa fa-medkit"></i>
+                  <div class="color-blue flex-item fd-boxes">
+                    <lord-icon
+                        src="https://cdn.lordicon.com//hsotfjpx.json"
+                        trigger="hover"
+                        colors="secondary:#1b1b1b,primary:#f3cd85"
+                        style="width:200px;height:200px">
+                    </lord-icon>
+                    <span class="color-white">ePharmaBiz</span>
                   </div>
-                  <div class="overlay">
-                    <div class="overlay-border"></div>
-                    <div class="overlay-box">
-                      <h3>ePharmabiz</h3>
-                    </div>
-                  </div>
+
                 </div>
               </div>
             </div>
@@ -265,7 +265,6 @@
         <div class="page-portfolio misc header">
           <div class="portfolio-header-info">
             <h1>Misc<span class="no-mobile-span">ellaneous</span></h1>
-            <h3>few of my side projects...</h3>
           </div>
         </div>
 
@@ -274,14 +273,14 @@
             <div class="col-xs-12 col-md-4">
               <div class="semi-height portfolio-missionary">
                 <div class="misionary-item" data-toggle="modal" data-target="#modalVoogle" data-load="voogle">
-                  <div class="logo-placement color-voogle">
-                    <i class="fa fa-cogs"></i>
-                  </div>
-                  <div class="overlay">
-                    <div class="overlay-border"></div>
-                    <div class="overlay-box">
-                      <h3>Voogle Idea Accelerator</h3>
-                    </div>
+                  <div class="color-voogle flex-item fd-boxes">
+                    <lord-icon
+                        src="https://cdn.lordicon.com//zpxybbhl.json"
+                        trigger="hover"
+                        colors="secondary:#1b1b1b,primary:#f3cd85"
+                        style="width:200px;height:200px">
+                    </lord-icon>
+                    <span class="color-white">Voogle conference</span>
                   </div>
                 </div>
               </div>
@@ -289,14 +288,14 @@
             <div class="col-xs-12 col-md-4">
               <div class="semi-height portfolio-missionary">
                 <div class="misionary-item" data-toggle="modal" data-target="#modalAwethor" data-load="awethor">
-                  <div class="logo-placement color-awethor">
-                    <i class="fa fa-pencil"></i>
-                  </div>
-                  <div class="overlay">
-                    <div class="overlay-border"></div>
-                    <div class="overlay-box">
-                      <h3>Awethor - Live text streaming platform</h3>
-                    </div>
+                  <div class="color-awethor flex-item fd-boxes">
+                    <lord-icon
+                        src="https://cdn.lordicon.com//wloilxuq.json"
+                        trigger="hover"
+                        colors="secondary:#1b1b1b,primary:#f3cd85"
+                        style="width:200px;height:200px">
+                    </lord-icon>
+                    <span class="color-white">Awethor - text streaming</span>
                   </div>
                 </div>
               </div>
@@ -304,15 +303,16 @@
             <div class="col-xs-12 col-md-4">
               <div class="semi-height portfolio-missionary">
                 <div class="misionary-item" data-toggle="modal" data-target="#modalKids" data-load="kids">
-                  <div class="logo-placement color-kids">
-                    <i class="fa fa-child"></i>
+                  <div class="color-kids flex-item fd-boxes">
+                    <lord-icon
+                        src="https://cdn.lordicon.com//lupuorrc.json"
+                        trigger="hover"
+                        colors="secondary:#1b1b1b,primary:#f3cd85"
+                        style="width:200px;height:200px">
+                    </lord-icon>
+                    <span class="color-white">Abc&123 - Mobile game for kids</span>
                   </div>
-                  <div class="overlay">
-                    <div class="overlay-border"></div>
-                    <div class="overlay-box">
-                      <h3>A2Z - Learn letters and numbers mobile game for kids</h3>
-                    </div>
-                  </div>
+                 
                 </div>
               </div>
             </div>
@@ -333,13 +333,13 @@
                 <img src="images/my-avtr.png" alt="my-avatar" class="img-circle">
               </div>
               <div class="zvonimir-info">
-                <div class="myName">Zvonimir Dimovski</div>
-                <div class="myAge"><span><i class="fa fa-clock-o"></i> Age:</span>35</div>
-                <div class="myHabitat"><span><i class="fa fa-globe"></i> Living habitat:</span>Varazdin - Croatia</div>
+                <div class="myName"><strong>Zvonimir Dimovski</strong></div>
+                <div class="myAge"><span>Age:</span>38</div>
+                <div class="myHabitat"><span>From:</span>Croatia</div>
                 <div class="social-contact">
                   <span><a href="https://www.facebook.com/zvonimir.dimovski" rel="noopener" target="_blank"><i class="fa fa-facebook"></i></a></span>
                   <span><a href="https://hr.linkedin.com/in/zvoncha" rel="noopener" target="_blank"><i class="fa fa-linkedin"></i></a></span>
-                  <span><a href="mailto:&#105;&#110;&#102;&#111;&#064;&#122;&#118;&#111;&#110;&#101;&#046;&#110;&#105;&#110;&#106;&#097;"><i class="fa fa-envelope"></i></a></span>
+                  <span><a href="mailto:&#122;&#118;&#111;&#110;&#105;&#109;&#105;&#114;&#46;&#100;&#105;&#109;&#111;&#118;&#115;&#107;&#105;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;"><i class="fa fa-envelope"></i></a></span>
                 </div>
 
               </div>
@@ -434,7 +434,7 @@
                       <span class="position-name">Eleven Venture Fund</span>
                     </div>
                     <div class="detail-date"><span class="cv-icon"><i class="fa fa-calendar"></i></span>2015</div>
-                  <a href="#" class="tooltips" data-toggle="tooltip" data-placement="top" title="As a startup enthusiast and the founder of Croatian startup conference Voogle, my relationship with startups does not stop there. Early 2015, few of my friends and me are starting Awethor.com - live text streaming platform for writers and authors. Awethor word in a coin from words 'Awsome' and 'Author'.
+                  <a href="#" class="tooltips t-link-color" data-toggle="tooltip" data-placement="top" title="As a startup enthusiast and the founder of Croatian startup conference Voogle, my relationship with startups does not stop there. Early 2015, few of my friends and me are starting Awethor.com - live text streaming platform for writers and authors. Awethor word in a coin from words 'Awsome' and 'Author'.
 
 The basic idea behind the Awethor is for a writer to share his real-time writing with his audience.
 
@@ -451,7 +451,7 @@ We applied to Eleven Startup Accelarator (second largest Europe accelerator) and
                       <span class="position-name">World Bank</span>
                     </div>
                     <div class="detail-date"><span class="cv-icon"><i class="fa fa-calendar"></i></span>2012</div>
-                  <a href="#" class="tooltips" data-toggle="tooltip" data-placement="top" title="For my idea and project called Web2Mobile, my company received first investment from BICRO. Web2Mobile has a simple idea - to create mobile versions of the websites for anyone without coding. As alway, simple ideas draw hard development proces and the bottom line we developed framework for building mobile websites from existing websites for our personal use which we implemented in several clients.">Project details</a>
+                  <a href="#" class="tooltips t-link-color" data-toggle="tooltip" data-placement="top" title="For my idea and project called Web2Mobile, my company received first investment from BICRO. Web2Mobile has a simple idea - to create mobile versions of the websites for anyone without coding. As alway, simple ideas draw hard development proces and the bottom line we developed framework for building mobile websites from existing websites for our personal use which we implemented in several clients.">Project details</a>
                   </div>
                 </div>
 
@@ -492,7 +492,7 @@ We applied to Eleven Startup Accelarator (second largest Europe accelerator) and
               <div class="cv-worked">Zvonimir is one of the best UI/UX designers I have worked with. He built nine screens of an enterprise application for me in two weeks, despite having more of a consumer-focused background. The most impressive thing is how effectively he "reads between the lines" of verbal and loosely defined requirements. If you've ever worked with offshore developers, you know that is typically the big gotcha. Zvonimir has excellent intuition when "filling in the gaps" and does things right the first time.</div>
               <div class="row cred-owner"><span>Sam Harris</span> Serial Entrepreneur / Growth-Stage Tech Executive</div>
           </div>
-          <div class="row credits">Designed and hand crafted by <a class="tooltips" href="" data-toggle="tooltip" data-placement="top" title="If you come this far, you probably liked my work, therefore you better contact me, or else... :)">Zvone.Ninja</a></div>
+          <div class="row credits">Designed and hand crafted by <span class="orange">zvone.ninja</span></div>
         </div>
       </div>
     </div>
@@ -594,6 +594,7 @@ We applied to Eleven Startup Accelarator (second largest Europe accelerator) and
   <script src="js/scrolloverflow.min.js"></script>
   <script src="js/jquery.fullpage.min.js"></script>
   <script src="js/custom.min.js"></script>
+  <script src="https://cdn.lordicon.com/libs/frhvbuzj/lord-icon-2.0.2.js"></script>
 
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
