--- a/index.html
+++ b/index.html
@@ -99,10 +99,9 @@
             <div class="semi-height my-skills">
               <div class="hw_center">
                 <div class="skill_desc">
-                  <div class="skill sketch">Sketch</div>
-                  <div class="skill photoshop">Photoshop</div>
-                  <div class="skill html5">HTML5</div>
-                  <div class="skill css3">CSS3</div>
+                  <div class="skill sketch">Sketch&Figma</div>
+                  <div class="skill photoshop">Adobe (PS & XD)</div>
+                  <div class="skill html5">HTML & CSS</div>
                   <div class="skill js">JavaScript</div>
                 </div>
                 <div class="prog">
@@ -117,9 +116,6 @@
                   </div>
                   <div class="progress">
                     <div class="progress-bar progress-bar-css3" role="progressbar" data-transitiongoal="90"></div>
-                  </div>
-                  <div class="progress">
-                    <div class="progress-bar progress-bar-js" role="progressbar" data-transitiongoal="80"></div>
                   </div>
                 </div>
               </div>
